--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 18 Sept 2006
+  Last Modified: 20 Sept 2006
   Number: 2
-  Version: 69
+  Version: 70
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -670,6 +670,7 @@ structural type of a variable:
     @   ordered array
     %   unordered hash (associative array)
     &   code/rule/token/regex
+    |   capture/arguments/match
     ::  package/module/class/role/subset/enum/type/grammar
     @@  multislice view of @
 
@@ -817,15 +818,22 @@ You may retrieve parts from a C<Capture> object with a prefix sigil operator:
     $$args;         # same as "$args as Scalar" or "Scalar($args)"
     @$args;         # same as "$args as Array"  or "Array($args)"
     %$args;         # same as "$args as Hash"   or "Hash($args)"
+    |$args;         # all of the above
 
 When cast into an array, you can access all the positional arguments; into a
 hash, all named arguments; into a scalar, its invocant.
+
+When stored in a variable using the C<|> sigil, the capture autointerpolates
+into argument lists much like C<@> autoflattens into lists:
+
+    |args := \($a, @b, :option($c));
+    somefunc(|args); 	# same as somefunc($a, @b, :option($c))
 
 All prefix sigil operators accept one positional argument, evaluated in
 scalar context as a rvalue.  They can interpolate in strings if called with
 parentheses.  The special syntax form C<$()> translates into C<$( $/ )> 
 to operate on the current match object; the same applies to C<@()>, C<%()> and
-C<*()> forms.
+C<|()> forms.
 
 C<Capture> objects fill the ecological niche of references in Perl 6.
 You can think of them as "fat" references, that is, references that
