--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 20 Sept 2006
+  Last Modified: 22 Sept 2006
   Number: 2
-  Version: 70
+  Version: 71
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -2300,7 +2300,7 @@ Here are the current grammatical categories:
 
     term:<...>                                  $x = {...}
     quote:<qX>                                  qX/foo/
-    prefix:<!>                                  !$x (and $x.! if no postfix:<!>)
+    prefix:<!>                                  !$x (and $x.'!')
     infix:<+>                                   $x + $y
     postfix:<++>                                $x++
     circumfix:<[ ]>                             [ @x ]
