clarified that prefix: ops with multiple args default to listop precedence
git-svn-id: http://svn.pugscode.org/pugs@23581 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -13,9 +13,9 @@ Allison Randal <al@shadowed.net>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 20 Sept 2006
+  Last Modified: 22 Sept 2006
   Number: 6
-  Version: 56
+  Version: 57
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -1762,7 +1762,8 @@ Prefix operators that are identifiers are handled specially.  Both of
 
 default to named unary precedence despite declaring a prefix operator.
 Likewise postfix operators that look like method calls are forced to
-default to the precedence of method calls.
+default to the precedence of method calls.  Any prefix operator that
+requires multiple arguments default to listop precedence.
 
 =item C<is assoc>
 
