Last ci had typo and was unclear about whether it applied only to identifiers.
git-svn-id: http://svn.pugscode.org/pugs@23582 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1763,7 +1763,8 @@ Prefix operators that are identifiers are handled specially.  Both of
 default to named unary precedence despite declaring a prefix operator.
 Likewise postfix operators that look like method calls are forced to
 default to the precedence of method calls.  Any prefix operator that
-requires multiple arguments default to listop precedence.
+requires multiple arguments defaults to listop precedence, even if it
+is not an identifier.
 
 =item C<is assoc>
 
