--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -13,7 +13,7 @@ Allison Randal <al@shadowed.net>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 24 Sept 2006
+  Last Modified: 25 Sept 2006
   Number: 6
   Version: 58
 
@@ -373,21 +373,24 @@ Only bare keys with valid identifier names are recognized as named arguments:
     doit :123<now>;	        # always a positional arg
 
 Going the other way, pairs intended as named arguments that don't look
-like pairs must be introduced with the C<[,]> reduction operator or
-the C<|> capture sigil:
+like pairs must be introduced with the C<|> prefix operator:
 
     $pair = :when<now>;
     doit $pair,1,2,3;                # always a positional arg
-    doit |%$pair,1,2,3;              # always a named arg
-    doit |%(get_pair()),1,2,3;       # always a named arg
-    doit |%('when' => 'now'),1,2,3;  # always a named arg
+    doit |$pair,1,2,3;               # always a named arg
+    doit |get_pair(),1,2,3;          # always a named arg
+    doit |('when' => 'now'),1,2,3;   # always a named arg
+
+Note the parens are necessary on the last one due to precedence.
 
 Likewise, if you wish to pass a hash and have its entries treated as
-named arguments, you must dereference it with a C<[,]> or C<|>:
+named arguments, you must dereference it with a C<|>:
 
     %pairs = {:when<now> :what<any>};
-    doit %pairs,1,2,3;		# always a positional arg
-    doit |%pairs,1,2,3;		# always named args
+    doit %pairs,1,2,3;		     # always a positional arg
+    doit |%pairs,1,2,3;		     # always named args
+    doit |%(get_pair()),1,2,3;       # always a named arg
+    doit |%('when' => 'now'),1,2,3;  # always a named arg
 
 Variables with a C<:> prefix in rvalue context autogenerate pairs, so you
 can also say this:
@@ -697,10 +700,10 @@ last if you want to force it to come in as the last argument.
 =head2 Argument list binding
 
 The underlying C<Capture> object may be bound to a single scalar
-parameter marked with a C<|> sigil.
+parameter marked with a C<|>.
 
     sub bar ($a,$b,$c,:$mice) { say $mice }
-    sub foo (|args) { say |args.perl; &bar.callargs(|args); }
+    sub foo (|$args) { say |$args.perl; &bar.callargs(|$args); }
 
 The C<.callargs> method of C<Code> objects accepts an argument list,
 (which can be specified as a Capture object as above), and calls it
@@ -712,19 +715,14 @@ It is allowed to specify additional parameters. The Capture binding merely
 takes a snapshot of what's left of the Capture at that point and then
 continues binding as if the Capture parameter weren't there:
 
-    sub compare (|args Num $x, Num $y --> Bool) { ... }
+    sub compare (|$args Num $x, Num $y --> Bool) { ... }
 
 =head2 Flattening argument lists
 
-The reduce operator C<[,]> casts each of its arguments to a C<Capture>
-object, then splices each of those captures into the argument list
-it occurs in.  The unary C<|> sigil has the same effect on a single
-argument.
-
-Casting C<Capture> to C<Capture> is a no-op:
-
-    [,](\(1, x=>2));    # Capture, becomes \(1, x=>2)
-      |(\(1, x=>2));    # Capture, becomes \(1, x=>2)
+The unary C<|> operator casts its arguments to a C<Capture>
+object, then splices that capture into the argument list
+it occurs in.  To get the same effect on multiple arguments you
+can use the C<< |« >> hyperoperator.
 
 C<Pair> and C<Hash> become named arguments:
 
@@ -734,10 +732,10 @@ C<Pair> and C<Hash> become named arguments:
 C<List> (also C<Seq>, C<Range>, etc.) are simply turned into
 positional arguments:
 
-    [,](1,2,3);         # Seq, becomes \(1,2,3)
-    [,](1..3);          # Range, becomes \(1,2,3)
-    [,](1..2, 3);       # List, becomes \(1,2,3)
-    [,]([x=>1, x=>2]);  # List (from an Array), becomes \((x=>1), (x=>2))
+    |(1,2,3);         # Seq, becomes \(1,2,3)
+    |(1..3);          # Range, becomes \(1,2,3)
+    |(1..2, 3);       # List, becomes \(1,2,3)
+    |([x=>1, x=>2]);  # List (from an Array), becomes \((x=>1), (x=>2))
 
 For example:
 
@@ -748,12 +746,12 @@ For example:
     foo(@onetothree);            # error: only one arg
     foo(|@onetothree);           # okay:  @onetothree flattened to three args
 
-The C<[,]> operator flattens lazily -- the array is flattened only if
+The C<|> operator flattens lazily -- the array is flattened only if
 flattening is actually required within the subroutine. To flatten before
 the list is even passed into the subroutine, use the C<eager> list
 operator:
 
-    foo([,] eager @onetothree);          # array flattened before &foo called
+    foo(|eager @onetothree);          # array flattened before &foo called
 
 
 =head2 Multidimensional argument list binding
@@ -1919,8 +1917,8 @@ were the argument to a C<return> list operator (with whitespace):
 
 On the caller's end, the C<Capture> is interpolated into any new argument list
 much like an array would be, that is, as a scalar in scalar context, and as a
-list in list context.  This is the default behavior, but as with an array, the
-caller may use C<< prefix:<[,]> >> or the C<|> sigil to inline the returned values as part of the
+list in list context.  This is the default behavior, but the
+caller may use C<< prefix:<|> >> to inline the returned values as part of the
 new argument list.  The caller may also bind the returned C<Capture> directly.
 
 =head2 The C<caller> function
@@ -2120,7 +2118,7 @@ The entire argument list may be captured by binding to a Capture parameter.
 It can then be passed to C<callargs> using that name:
 
     # Double the return value for &thermo
-    &thermo.wrap( -> |args { callargs(|args) * 2 } );
+    &thermo.wrap( -> |$args { callargs(|$args) * 2 } );
 
 In this case only the return value is changed.
 
@@ -2128,7 +2126,7 @@ The wrapper is not required to call the original routine; it can call another
 C<Code> object by passing the C<Capture> to its C<call> method:
 
     # Transparently redirect all calls to &thermo to &other_thermo
-    &thermo.wrap( -> |args { &other_thermo.callargs(|args) } );
+    &thermo.wrap( -> |$args { &other_thermo.callargs(|$args) } );
 
 or more briefly:
 
@@ -2140,9 +2138,9 @@ call the next-most-likely method or multi-sub; see S12 for details.
 As with any return value, you may capture the returned C<Capture> of C<call>
 by binding:
 
-    my |retval := callargs(|args);
+    my |$retval := callargs(|$args);
     ... # postprocessing
-    return |retval;
+    return |$retval;
 
 =head2 The C<&?ROUTINE> object
 
