Extirpated machine-dependent definition of bit complement, noticed by audreyt++.
git-svn-id: http://svn.pugscode.org/pugs@23590 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 25 Sept 2006
+  Last Modified: 28 Sept 2006
   Number: 3
-  Version: 68
+  Version: 69
 
 =head1 Changes to Perl 5 operators
 
@@ -923,7 +923,7 @@ Builtin reduce operators return the following identity values:
     [%]()       # fail  (reduce is nonsensical)
     [x]()       # fail  (reduce is nonsensical)
     [xx]()      # fail  (reduce is nonsensical)
-    [+&]()      # +^0   (-1 on 2's complement machine)
+    [+&]()      # -1    (from +^0, the 2's complement in arbitrary precision)
     [+<]()      # fail  (reduce is nonsensical)
     [+>]()      # fail  (reduce is nonsensical)
     [~&]()      # fail  (sensical but 1's length indeterminate)
