* S02: Re-introduce comprehension, this time not context-specific,        under the list() syntactic expression:
    # list() comprehension that evaluates to (2,3,5)
    1 < list(1,1,2,3,5,8) < 8

* Also bump S09's version.
  

git-svn-id: http://svn.pugscode.org/pugs@23592 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 26 Sept 2006
+  Last Modified: 1 Oct 2006
   Number: 2
-  Version: 73
+  Version: 74
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -2145,6 +2145,32 @@ really does exactly the same thing as putting a list in parentheses with
 at least one comma.  But it's more readable in some situations.)
 
 To force a non-flattening scalar context, use the "C<item>" operator.
+
+=item *
+
+When evaluating chained operators, if a C<list()> occurs anywhere in that
+chain, the chain will be transformed first into a C<grep>.  That is,
+
+    for 0 <= list(@x) < all(@y) {...}
+
+becomes
+
+    for @x.grep:{ 0 <= $_ < all(@y) } {...}
+
+Because of this, the original ordering C<@x> is guaranteed to be
+preserved in the returned list, and duplicate elements in C<@x> are
+preserved as well.  In particular,
+
+    @result = list(@x) ~~ {...};
+
+is equivalent to
+
+    @result = @x.grep:{...};
+
+However, this I<list() comprehension> is strictly a syntactic transformation,
+so a list computed any other way will not triger the rewrite:
+
+    @result = (@x = list(@y)) ~~ {...}; # not a comprehension
 
 =item *
 
